# bmo-challenge

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  e2e_test.sh  main.py  pyproject.toml  test_agent.py
backend/src/: __init__.py
backend/src/agent/: __init__.py  graph.py
backend/src/api/: __init__.py  models.py  routes.py
backend/src/persistence/: __init__.py  storage.py
backend/src/tools/: __init__.py  calculator.py  text_processor.py  weather_mock.py
backend/tests/: test_persistence.py  test_tools.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/api/: client.js  client.ts
frontend/src/components/: ExecutionSteps.css  ExecutionSteps.jsx  ExecutionSteps.tsx  TaskHistory.css  TaskHistory.jsx  TaskHistory.tsx  TaskInput.css  TaskInput.jsx  TaskInput.tsx  TaskResult.css  TaskResult.jsx  TaskResult.tsx
frontend/src/hooks/: useStreamingTask.js  useStreamingTask.ts
frontend/src/types/: index.ts
